# ChangeLog for media-sound/gnomeradio
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.4 2003/02/12 07:28:30 vapier Exp $

*gnomeradio-1.3 (23 Oct 2002)

  23 Oct 2002; foser <foser@gentoo.org> :
  New version, fixed deps. Thanks to Markus Bertheau <twanger@bluetwanger.de>

*gnomeradio-1.2.1 (26 Jul 2002)
  26 Jul 2002; Spider <spider@gentoo.org> gnomeradio-1.2.1.ebuild:
  eclassified, new version

*gnomeradio-1.2 (16 Jul 2002)

  16 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> gnomeradio-1.2.ebuild :
  
  Initial cvs import. A Radio Tuner For GNOME2