@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/gnomeradio
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.4 2003/02/12 07:28:30 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.5 2003/02/15 16:11:53 foser Exp $
+
+*gnomeradio-1.4 (15 Feb 2003)
+
+  15 Feb 2003; foser <foser@gentoo.org> gnomeradio-1.4.ebuild :
+  New version, fixed deps
 
 *gnomeradio-1.3 (23 Oct 2002)
 
